--- a/out.html
+++ b/out.html
@@ -3,38 +3,84 @@
   <head>
     <title>Magic Draft Deck</title>
     <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css' rel='stylesheet'>
-    <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css' rel='stylesheet'>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'></script>
   </head>
   <body>
+    <nav class='navbar navbar-default'>
+      <div class='container-fluid'>
+        <div class='navbar-header'>
+          <a class='navbar-brand' href='#'>
+            MtG Draft Master
+          </a>
+        </div>
+      </div>
+    </nav>
     <div class='container-fluid'>
       <div class='row'>
         <div class='col-md-1'></div>
-        <div class='col-md-10'>
-          <h2>Enter your draft deck</h2>
+        <div class='col-md-11'>
+          <form>
+            <div class='row'>
+              <div class='col-xs-3'>
+                <div class='form-group'>
+                  <select class='form-control' id='set'>
+                    <option value='KTK'>Khans of Tarkir</option>
+                    <option value='FRF'>Fate Reforged</option>
+                  </select>
+                </div>
+              </div>
+              <div class='col-xs-2'>
+                <div class='form-group'>
+                  <input autofocus='true' class='form-control' id='cardNumber' placeholder='Card No.' type='text'>
+                </div>
+              </div>
+              <div class='col-xs-1'>
+                <button class='btn btn-default' type='submit'>Add Card</button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
     <div class='container-fluid'>
       <div class='row'>
         <div class='col-md-2'>
-          Things one
+          <h4>Blue</h4>
+          <ul class='list-unstyled'>
+            <li>Counterspell</li>
+            <li>Counterspell</li>
+          </ul>
         </div>
-        <div class='col-md-10'>
-          <form class='form-inline'>
-            <div class='form-group'>
-              <label for='set'>Set</label>
-              <select class='form-control' id='set'>
-                <option value='KTR'>Khans of Tarkir</option>
-                <option value='FRF'>Fate Reforged</option>
-              </select>
-            </div>
-            <div class='form-group'>
-              <label for='cardNumber'>Card No.</label>
-              <input class='form-control' id='cardNumber' placeholder='0' type='number'>
-            </div>
-            <button class='btn btn-default' type='submit'>Send invitation</button>
-          </form>
+        <div class='col-md-2'>
+          <h4>Black</h4>
+          <ul class='list-unstyled'>
+            <li>Counterspell</li>
+            <li>Counterspell</li>
+          </ul>
+        </div>
+        <div class='col-md-2'>
+          <h4>Red</h4>
+          <ul class='list-unstyled'>
+            <li>Counterspell</li>
+            <li>Counterspell</li>
+          </ul>
+        </div>
+        <div class='col-md-2'>
+          <h4>Green</h4>
+          <ul class='list-unstyled'>
+            <li>Counterspell</li>
+            <li>Counterspell</li>
+          </ul>
+        </div>
+        <div class='col-md-2'>
+          <h4>White</h4>
+          <ul class='list-unstyled'>
+            <li>Counterspell</li>
+            <li>Counterspell</li>
+          </ul>
+        </div>
+        <div class='col-md-2'>
+          <h4>Other</h4>
         </div>
       </div>
     </div>
